Update CIMS dashboard layout and navigation flow